--- a/docs/_layouts/index.html
+++ b/docs/_layouts/index.html
@@ -8,6 +8,8 @@ layout: default
 
 <hr />
 
+<h1>Liste chronologique des lettres</h1>
+
 <ul>
   {% for post in site.posts reversed %}
     <li><a href="{{site.baseurl}}/{{ post.url }}">{{ post.title }}</a></li>
