--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -26,7 +26,7 @@ layout: default
 {{ content }}
 
 
-<div class="PageNavigation">
+<div id="page_navigation">
   {% if page.previous.url %}
     <a class="prev" href="{{site.baseurl}}/{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
   {% endif %}
