--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -1,6 +1,26 @@
 ---
 ---
 
-@import "{{ site.theme }}";
 
-@import "base";
+.ribbon-inner h1 a {
+  color: white;
+}
+
+
+#page_navigation {
+  font-size: 14px;
+  display: block;
+  width: auto;
+  overflow: hidden;
+}
+
+#page_navigation a {
+  display: block;
+  width: 50%;
+  float: left;
+  margin: 1em 0;
+}
+
+#page_navigation .next {
+  text-align: right;
+}
