--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<h1><a href="{{site.baseurl}}">{{ page.title }}</a></h1>
+<h1>{{ page.title }}</h1>
 <p align="right">{{ page.place }} le 
 {% assign m = page.date | date: "%-m" %}
 {{ page.date | date: "%-d" }}
