--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -2,6 +2,10 @@
 layout: default
 ---
 <h1>{{ page.title }}</h1>
+
+
+<div class="letter">
+
 <p align="right">{{ page.place }} le 
 {% assign m = page.date | date: "%-m" %}
 {{ page.date | date: "%-d" }}
@@ -24,6 +28,9 @@ layout: default
 </p>
 
 {{ content }}
+
+
+</div>
 
 
 <div id="page_navigation">
