--- a/docs/_layouts/index.html
+++ b/docs/_layouts/index.html
@@ -8,7 +8,7 @@ layout: default
 
 <hr />
 
-<h1><a name="liste">Liste chronologique des lettres</a></h1>
+<h1><a name="liste"></a>Liste chronologique des lettres</h1>
 
 <ul>
   {% for post in site.posts reversed %}
