--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -22,6 +22,11 @@
   font-family: "PinyonScript";
 }
 
+.letter ins {
+  text-decoration-style: wavy;
+  text-decoration-thickness: 1px;
+}
+
 
 #page_navigation {
   font-size: 90%;
