--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -27,6 +27,10 @@
   text-decoration-thickness: 1px;
 }
 
+.letter ins.straight {
+  text-decoration-style: solid;
+}
+
 
 #page_navigation {
   font-size: 90%;
