--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -1,6 +1,15 @@
 ---
 layout: default
 ---
+
+<div id="fontselect">
+  Font <select>
+    <option value="PinyonScript">Script</option>
+    <option value="serif">Serif</option>
+    <option value="sans-serif">Sans Serif</option>
+  </select>
+</div>
+
 <h1>{{ page.title }}</h1>
 
 
