--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div id="fontselect">
-  Police: <select>
+  <select>
     <option value="PinyonScript">Script</option>
     <option value="serif">Serif</option>
     <option value="sans-serif">Sans Serif</option>
