--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 
-<div id="fontselect">
-  <select>
+<div id="fontselect" title="Choisir la police d'affichage">
+  <span class="big">Aa</span> <select>
     <option value="PinyonScript">Script</option>
     <option value="serif">Serif</option>
     <option value="sans-serif">Sans Serif</option>
