é Signed-off-by: Raphaël Pinson <raphael.pinson@camptocamp.com>

--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -5,8 +5,8 @@ layout: default
 <div id="fontselect" title="Choisir la police d'affichage">
   <span class="big">Aa</span> <select>
     <option value="PinyonScript">Script</option>
-    <option value="serif">Serif</option>
-    <option value="sans-serif">Sans Serif</option>
+    <option value="serif">Sérif</option>
+    <option value="sans-serif">Sans Sérif</option>
   </select>
 </div>
 
