--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -48,6 +48,10 @@ le {{ page.date | date: "%-d" }}
 {{ content }}
 
 
+<div class="signature">
+  <img src="{{site.baseurl}}/assets/images/signatures/{{page.author}}.png" />
+</div>
+
 </div>
 
 
