--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -49,7 +49,7 @@ le {{ page.date | date: "%-d" }}
 
 
 <div class="signature">
-  <img src="{{site.baseurl}}/assets/images/signatures/{{page.author}}.png" />
+  <img src="{{site.baseurl}}/assets/images/signatures/{{page.author}}.png" title="{{page.author}}" alt="{{page.author}}" />
 </div>
 
 </div>
