--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -45,7 +45,7 @@ le {{ page.date | date: "%-d" }}
 <!-- - {{ page.author }} -->
 </p>
 
-{{ content }}
+{{ content | microtypo: 'fr_FR' }}
 
 
 <div class="signature">
