--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -38,7 +38,7 @@ layout: default
   {% when '9' %}Septembre
   {% when '10' %}Octobre
   {% when '11' %}Novembre
-  {% when '12' %}Decembre
+  {% when '12' %}Décembre
 {% endcase %}
 {{ page.date | date: "%Y" }}
 {% endif %}
