--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -20,6 +20,10 @@ span.big {
   font-size: 140%;
 }
 
+.letter sup {
+  vertical-align: super;
+  font-size: smaller;
+}
 
 .letter {
   font-family: "PinyonScript";
