espace avant sup
Signed-off-by: Raphaël Pinson <raphael.pinson@camptocamp.com>

--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -27,6 +27,10 @@ sup {
   text-decoration-style: double;
 }
 
+sup:before {
+  content: ' ';
+}
+
 .letter {
   font-family: "PinyonScript";
   font-size: 140%;
