Add google analytics

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -34,6 +34,14 @@
       });
     </script>
 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YX6F664944"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-YX6F664944');
+    </script>
+
 {% seo %}
   </head>
 
