--- a/docs/_layouts/index.html
+++ b/docs/_layouts/index.html
@@ -11,29 +11,9 @@ layout: default
 <h1><a name="liste"></a>Liste chronologique des lettres</h1>
 
 <ul>
+  {% assign num_month = false %}
+  {% assign full_year = true %}
   {% for post in site.posts reversed %}
-  <li><a href="{{site.baseurl}}/{{ post.url }}">
-  {%- assign d = post.date | date: "%-d" %}
-  {%- assign m = post.date | date: "%-m" %}
-  {%- if post.date_text %}
-    {{ post.date_text }}
-  {%- else %}
-    {{ d }}{% if d=='1' %}<sup>er</sup>{% endif %}
-  {% case m %}
-    {% when '1' %}Janvier
-    {% when '2' %}Février
-    {% when '3' %}Mars
-    {% when '4' %}Avril
-    {% when '5' %}Mai
-    {% when '6' %}Juin
-    {% when '7' %}Juillet
-    {% when '8' %}Août
-    {% when '9' %}Septembre
-    {% when '10' %}Octobre
-    {% when '11' %}Novembre
-    {% when '12' %}Décembre
-  {% endcase -%}
-  {{ post.date | date: "%Y" }}
-  {%- endif %} ({{post.title}})</a></li>
+  <li><a href="{{site.baseurl}}/{{ post.url }}">{% include date.html %} ({{post.title}})</a></li>
   {% endfor %}
 </ul>
