--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -23,32 +23,10 @@ layout: default
 <p align="right">
 {%- if page.no_date %}{% else %}
   {{ page.place }} {{ page.day }}
-  {% assign d = page.date | date: "%-d" %}
-  {% assign m = page.date | date: "%-m" %}
-  {% if page.date_text %}
-    {{ page.date_text }}
-  {% else %}
-    {{ d }}{% if d=='1' %}<sup>er</sup>{% endif %}
-    {% case m %}
-      {% when '1' %}Janvier
-      {% when '2' %}Février
-      {% when '3' %}Mars
-      {% when '4' %}Avril
-      {% when '5' %}Mai
-      {% when '6' %}Juin
-      {% when '7' %}Juillet
-      {% when '8' %}Août
-      {% when '9' %}{% if page.num_month %}7<sup>bre</sup>{% else %}Septembre{% endif %}
-      {% when '10' %}{% if page.num_month %}8<sup>bre</sup>{% else %}Octobre{% endif %}
-      {% when '11' %}{% if page.num_month %}9<sup>bre</sup>{% else %}Novembre{% endif %}
-      {% when '12' %}{% if page.num_month %}x<sup>bre</sup>{% else %}Décembre{% endif %}
-    {% endcase -%}
-    {% if page.full_year -%}
-      {{ page.date | date: "%Y" }}
-    {% else -%}
-      /{{ page.date | date: "%y" }}
-    {% endif %}
-  {% endif %}
+  {% assign post = page %}
+  {% assign num_month = page.num_month %}
+  {% assign full_year = page.full_year %}
+  {% include date.html %}
 {% endif %}
 </p>
 
@@ -70,11 +48,16 @@ layout: default
 </div>
 
 
+{% assign num_month = false %}
+{% assign full_year = true %}
+
 <div id="page_navigation">
   {% if page.previous.url %}
-    <a class="prev" href="{{site.baseurl}}/{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
+    {% assign post=page.previous %}
+    <a class="prev" href="{{site.baseurl}}/{{page.previous.url}}">&laquo; {% include date.html %} ({{post.title}})</a>
   {% endif %}
   {% if page.next.url %}
-    <a class="next" href="{{site.baseurl}}/{{page.next.url}}">{{page.next.title}} &raquo;</a>
+    {% assign post=page.next %}
+    <a class="next" href="{{site.baseurl}}/{{page.next.url}}">{% include date.html %} ({{post.title}}) &raquo;</a>
   {% endif %}
 </div>
