Update analytics stream

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -34,12 +34,12 @@
       });
     </script>
 
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YX6F664944"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VD6QN5XQTR"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-YX6F664944');
+      gtag('config', 'G-VD6QN5XQTR');
     </script>
 
 {% seo %}
