--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -51,7 +51,7 @@
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <h1><a href="{{site.baseurl}}" style="color:white">{{ site.title | default: site.github.repository_name }}</a></h1>
+            <h1><a href="{{ "/" | absolute_url }}" style="color:white">{{ site.title | default: site.github.repository_name }}</a></h1>
             <h2>{{ site.description | default: site.github.project_tagline }}</h2>
           </span>
           <span class="left-tail"></span>
