--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -35,7 +35,8 @@ layout: default
 
 {% if page.author %}
 <div class="signature">
-  <img src="{{site.baseurl}}/assets/images/signatures/{{page.author}}.png" title="{{page.author}}" alt="{{page.author}}" />
+  {% assign sig_url = "/assets/images/signatures/" | append: page.author | append: ".png" %}
+  <img src="{{ sig_url | absolute_url }}" title="{{page.author}}" alt="{{page.author}}" />
 </div>
 {% endif %}
 
@@ -54,10 +55,10 @@ layout: default
 <div id="page_navigation">
   {% if page.previous.url %}
     {% assign post=page.previous %}
-    <a class="prev" href="{{site.baseurl}}/{{page.previous.url}}">&laquo; {% include date.html %} ({{post.title}})</a>
+    <a class="prev" href="{{ page.previous.url | absolute_url }}">&laquo; {% include date.html %} ({{post.title}})</a>
   {% endif %}
   {% if page.next.url %}
     {% assign post=page.next %}
-    <a class="next" href="{{site.baseurl}}/{{page.next.url}}">{% include date.html %} ({{post.title}}) &raquo;</a>
+    <a class="next" href="{{ page.next.url | absolute_url }}">{% include date.html %} ({{post.title}}) &raquo;</a>
   {% endif %}
 </div>
