--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -10,6 +10,8 @@ layout: default
   </select>
 </div>
 
+{% include navigation.html %}
+
 <hr />
 
 
@@ -49,16 +51,4 @@ layout: default
 </div>
 
 
-{% assign num_month = false %}
-{% assign full_year = true %}
-
-<div id="page_navigation">
-  {% if page.previous.url %}
-    {% assign post=page.previous %}
-    <a class="prev" href="{{ page.previous.url | relative_url }}">&laquo; {% include date.html %} ({{post.title}})</a>
-  {% endif %}
-  {% if page.next.url %}
-    {% assign post=page.next %}
-    <a class="next" href="{{ page.next.url | relative_url }}">{% include date.html %} ({{post.title}}) &raquo;</a>
-  {% endif %}
-</div>
+{% include navigation.html %}
