--- a/docs/_includes/navigation.html
+++ b/docs/_includes/navigation.html
@@ -5,9 +5,13 @@
   {% if page.previous.url %}
     {% assign post=page.previous %}
     <a class="prev" href="{{ page.previous.url | relative_url }}">&laquo; {% include date.html %} ({{post.title}})</a>
+  {% else %}
+    <a class="prev"></a>
   {% endif %}
   {% if page.next.url %}
     {% assign post=page.next %}
     <a class="next" href="{{ page.next.url | relative_url }}">{% include date.html %} ({{post.title}}) &raquo;</a>
+  {% else %}
+    <a class="next"></a>
   {% endif %}
 </div>
