--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -22,6 +22,8 @@
     <script src="{{ '/assets/js/modernizr.js' | relative_url }}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js" integrity="sha512-jGsMH83oKe9asCpkOVkBnUrDDTp8wl+adkB2D+//JtlxO4SrLoJdhbOysIFQJloQFD+C4Fl1rMsQZF76JjV0eQ==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js" integrity="sha512-uto9mlQzrs59VwILcLiRYeLKPPbS/bT71da/OEBYEwcdNUk8jYIy+D176RYoop1Da+f9mvkYrmj5MCLZWEtQuA==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mobile/1.4.1/jquery.mobile.min.js" integrity="sha512-wSacGPS/KRyVB67O4xD+Eh1OX4/dq4juZj9DKTokRt81BzLbfsSMtNgR9Pu8FLr4kLbk5oNr9Hq+5PeWLCX8mA==" crossorigin="anonymous"></script>
+
     <script src="{{ '/assets/js/headsmart.min.js' | relative_url }}"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
@@ -45,8 +47,15 @@
           collapsible: true,
           heightStyle: "content"
         });
-      });
 
+        $("#letter").on("swiperight", function() {
+          window.location = $('.page_navigation a.prev')[0].href;
+        });
+
+        $("#letter").on("swipeleft", function() {
+          window.location = $('.page_navigation a.next')[0].href;
+        });
+      });
     </script>
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-VD6QN5XQTR"></script>
