--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
 <hr />
 
 
-<div class="letter">
+<div id="letter">
 
 {% if page.note %}
 <div class="note">{{ page.note }}</div>
