--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -58,13 +58,16 @@
       });
     </script>
 
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VD6QN5XQTR"></script>
+
+    {% if site.google_analytics %}
+    <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-VD6QN5XQTR');
+      gtag('config', '{{ site.google_analytics }}');
     </script>
+    {% endif %}
 
     {% assign post=page %}
     {% assign num_month = false %}
@@ -121,16 +124,5 @@
       </footer>
 
     </div>
-
-    {% if site.google_analytics %}
-      <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-        ga('create', '{{ site.google_analytics }}', 'auto');
-        ga('send', 'pageview');
-      </script>
-    {% endif %}
   </body>
 </html>
