Move main.js to assets
Signed-off-by: Raphaël Pinson <raphael.pinson@camptocamp.com>

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -27,37 +27,7 @@
     <script src="{{ '/assets/js/headsmart.min.js' | relative_url }}"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
-    <script>
-      $(document).ready(function () {
-        $('#main_content').headsmart()
-
-        var letter_font = Cookies.get('letter_font') || 'PinyonScript';
-        $('#fontselect select').val(letter_font);
-        $("#letter").css('font-family', letter_font);
-        $("#letter blockquote").css('font-family', letter_font);
-      
-        $("#fontselect select").change(function () {
-          var font = $(this).children('option:selected').val();
-          Cookies.set('letter_font', font)
-          $("#letter").css('font-family', font);
-          $("#letter blockquote").css('font-family', font);
-        });     
-
-        $("#accordion").accordion({
-          collapsible: true,
-          heightStyle: "content"
-        });
-
-        $("#letter").on("swiperight", function() {
-          window.location = $('.page_navigation a.prev')[0].href;
-        });
-
-        $("#letter").on("swipeleft", function() {
-          window.location = $('.page_navigation a.next')[0].href;
-        });
-      });
-    </script>
-
+    <script src="{{ '/assets/js/main.js?v=' | append: site.github.build_revision | relative_url }}"></script>
 
     {% if site.google_analytics %}
     <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
