--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div id="fontselect" title="Choisir la police d'affichage">
+<div id="fontselect" class="fontselect" title="Choisir la police d'affichage">
   <span class="big">Aa</span> <select>
     <option value="PinyonScript">Script</option>
     <option value="serif">Sérif</option>
@@ -15,7 +15,7 @@ layout: default
 <hr />
 
 
-<div id="letter">
+<div id="letter" class="fontselect">
 
 {% if page.note %}
 <div class="note">{{ page.note }}</div>
